--- a/Contacto.html
+++ b/Contacto.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="PortadaBlog.html">BLOG</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="PortadaBlog.html">BLOG</a></li><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="form1-16" style="background-color: rgb(255, 255, 255); padding-top: 160px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="form1-16" style="background-color: rgb(255, 255, 255); padding-top: 160px; padding-bottom: 40px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -82,7 +82,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="t8CFDAZNWDJvctR93utWYsp27QyegBcv83oYwlN7Y9usnAOECdt6BgCBnVW56p9YoXzaIxKg4U3Avt71kzeA0Py6WvPKniCBZF1R3V6tm2J7FM7Stb9JHv+8hicKcbUr" data-form-email="true">
+                        <input type="hidden" value="6Yx9bexGsbCgD7/puD8oZnXwMdfWlObSrlYrajvSrPKIb8wgiirp5//K83KxTstbHWyiTr7J+AyNsBKBg4dflw36R39Jk9RIWnL9cm5UByMgacJzanydkXqeVCebR+DA" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
