--- a/PortadaBlog.html
+++ b/PortadaBlog.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="PortadaBlog.html">BLOG</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="PortadaBlog.html">BLOG</a></li><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Maker</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-i" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-i" style="background-color: rgb(255, 255, 255);">
 
     
 
