--- a/BlogSection1.html
+++ b/BlogSection1.html
@@ -46,7 +46,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="PortadaBlog.html">BLOG</a></li><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="PortadaBlog.html">BLOG</a></li><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="Contacto.html">CONTACT US</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-1j" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 30px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Builder</a></section><section class="mbr-info mbr-section mbr-section-md-padding mbr-after-navbar" id="msg-box2-1j" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 30px;">
 
     
     <div class="container">
