--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 <section id="menu-d">
 
-    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent">
         <div class="container">
 
             <div class="mbr-table">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><div id="header1-b" custom-code="true" class="mbr-after-navbar"><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" style="background-image: url(assets/images/carlo-navarro-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Creator</a></section><div id="header1-b" custom-code="true" class="mbr-after-navbar"><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" style="background-image: url(assets/images/carlo-navarro-2000x1333.jpg);">
 
     
 
