--- a/Contacto.html
+++ b/Contacto.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="PortadaBlog.html">BLOG</a></li><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="PortadaBlog.html">BLOG</a></li><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link" href="index.html">spanish version</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="form1-16" style="background-color: rgb(255, 255, 255); padding-top: 160px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Generator</a></section><section class="mbr-section mbr-after-navbar" id="form1-16" style="background-color: rgb(255, 255, 255); padding-top: 160px; padding-bottom: 40px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -82,7 +82,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="pDe7ePU57TQzvfURIjzUiKqz6AXbz0lxLiEqtjNmD3Spx9Nk6d1suyGxlKaW3nQIKkqHY8PXskP5tUN307dbqhyYY3vsIQ4qM9VUvUZugec7bCof3a9W4SKF8FTDLvxo" data-form-email="true">
+                        <input type="hidden" value="JYBx2ZdtRF/G5dFk8TZ7ytf8AfGze/do53fXnYSiOmUBaRroTOjdDY/9jZeopfDqDvu8d5NtEqbL4/OpHgwkHsz+j1vl5F2HNcAbFIaH2+sob48zKucbFmbll4AzjWSi" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
