--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html#header3-n" aria-expanded="false">OUR SERVICES</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-t" aria-expanded="false">ABOUT US</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-y" aria-expanded="false">INSURANCE</a></li><li class="nav-item"><a class="nav-link link" href="PortadaBlog.html" aria-expanded="false">BLOG</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="Contacto.html">CONTACT US</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html#header3-n" aria-expanded="false">OUR SERVICES</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-t" aria-expanded="false">ABOUT US</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-y" aria-expanded="false">INSURANCE</a></li><li class="nav-item"><a class="nav-link link" href="PortadaBlog.html" aria-expanded="false">BLOG</a></li><li class="nav-item"><a class="nav-link link" href="PortadaBlog.html" aria-expanded="false">spanish version</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="Contacto.html">CONTACT US</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Creator</a></section><div id="header1-b" custom-code="true" class="mbr-after-navbar"><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" style="background-image: url(assets/images/carlo-navarro-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><div id="header1-b" custom-code="true" class="mbr-after-navbar"><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" style="background-image: url(assets/images/carlo-navarro-2000x1333.jpg);">
 
     
 
